--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <img class="lelogo" src="img/logo.png" alt="Logo">
                 
                 <h1 class="boutique">Ma Boutique</h1>
+                <p class="venteenligne">Vente en ligne : Mode, Tendance et Déco</p>
 
             </div><!-- Fin logo -->
 
