--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="descriptions"><!-- Début qui sommes nous ? -->
                     <h5>Qui sommes nous ?</h5>
                     <br>
-                    <p>Bienvenue chez MaBoutique ! MaBoutique  est la plus grande boutique en ligne de France consacrée à la mode et à la beauté pour les femmes et les hommes.
+                    <p class="bienvenue">Bienvenue chez MaBoutique ! MaBoutique  est la plus grande boutique en ligne de France consacrée à la mode et à la beauté pour les femmes et les hommes.
                         Nous proposons plus de 850 marques ainsi que nos propres collections.
                         N'hésitez plus ! les livraisons et les retours sont gratuits. Retrait possible de votre commande dans notre entrepot sur RDV.
                     </p>
@@ -99,27 +99,28 @@
 
         <div class="articles"><!-- Début articles -->
 
-            <div><!-- Bon plan -->
+            <div class="coupdecoeur"><!-- Bon plan -->
 
-                <h6>Bon Plan</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sunt quia. Accusantium laborum maiores et exercitationem non. Ducimus, quae ipsa sint officia corporis consectetur architecto dignissimos minima fugiat ex nulla?</p>
-
+                <h2>Bon Plan</h2>
+                <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sunt quia. Accusantium laborum maiores et exercitationem non. Ducimus, quae ipsa sint officia corporis consectetur architecto dignissimos minima fugiat ex nulla?</p>
+                <!-- <img class="robe" src="img/robe.png" alt="robe"> -->
             </div><!-- Fin bon plan -->
 
-            <div><!-- coup de coeur -->
+            <div class="coupdecoeur"><!-- coup de coeur -->
 
-                <h6>Coup de coeur</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sunt quia. Accusantium laborum maiores et exercitationem non. Ducimus, quae ipsa sint officia corporis consectetur architecto dignissimos minima fugiat ex nulla?</p>
-
+                <h2>Coup de coeur</h2>
+                <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sunt quia. Accusantium laborum maiores et exercitationem non. Ducimus, quae ipsa sint officia corporis consectetur architecto dignissimos minima fugiat ex nulla?</p>
+                <!-- <img class="talon" src="img/talons.png" alt="talons"> -->
             </div><!-- Fin coup de coeur -->
 
-            <div><!-- Objectif Plasir -->
-                <h6>Objectif Plaisir</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sunt quia. Accusantium laborum maiores et exercitationem non. Ducimus, quae ipsa sint officia corporis consectetur architecto dignissimos minima fugiat ex nulla?</p>
+            <div class="coupdecoeur"><!-- Objectif Plasir -->
+                <h2>Objectif Plaisir</h2>
+                <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, sunt quia. Accusantium laborum maiores et exercitationem non. Ducimus, quae ipsa sint officia corporis consectetur architecto dignissimos minima fugiat ex nulla?</p>
 
             </div><!-- Fin  Objectif Plasir -->
-
+          
         </div><!-- Fin articles -->
+        <div class="clear"> </div>
 
         <footer>
                 <a href="#">Newletter - </a>
